--- a/SFDC/SFDC/src/classes/aaaaaaaa.cls
+++ b/SFDC/SFDC/src/classes/aaaaaaaa.cls
@@ -5,5 +5,6 @@ public static void minqqq()
     
      Bill__c A=new Bill__c(Call_Chatges__c=50);
                insert A;
+               system.debug('hi');
 }
 }
